# f1_pitstop

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  2026-04-04T21-06_export.csv  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASHBOARD_CALCULOS.md  DOCS_ADAPTERS.md  LICENSE  Makefile  PERFORMANCE_README.md  README.md  RELEASE_NOTES.md  _test_plans.py  benchmark.py  benchmark_dashboard.py  benchmark_performance.py  dashboard.py  dashboard_simple.py  dashboard_test.py  dashboard_ultra_simple.py  data_exploration.ipynb  init_models.py  mypy.ini  notas personales.txt  pyproject.toml  requirements.in  requirements.txt  ruff.toml  run_dashboard.bat  run_dashboard.ps1  strategy.py  strategy_model.py  test_dashboard.py
.github/workflows/: ci.yaml  ci.yml  ruff.yml  workflow-lint.yml
F1Manager2024Logger-dev/: .gitignore  App.config  CHANGELOG.md  F1Manager2024Plugin.csproj  F1Manager2024Plugin.sln  F1Manager2024PluginSettings.cs  F1ManagerPlotter.cs  MmfReader.cs  Privacy Policy.md  README.md  SaveCacheQueries.cs  SaveHandler.cs  SettingsControl.xaml  SettingsControl.xaml.cs  TelemetryHelpers.cs  ToS.md  exporter.cs  packages.config
F1Manager2024Logger-dev/.github/DEV_TEMPLATES/: ISSUE_TEMPLATE.md
F1Manager2024Logger-dev/.github/ISSUE_TEMPLATE/: bug_report.md
F1Manager2024Logger-dev/MemoryReader/: MemoryReader.csproj  MemoryReader.sln  Program.cs
F1Manager2024Logger-dev/MemoryReader/Properties/: AssemblyInfo1.cs
F1Manager2024Logger-dev/Properties/: AssemblyInfo.cs  Resources.Designer.cs
MemoryReader/: MemoryReader.deps.json  MemoryReader.runtimeconfig.json
adapters/: __init__.py  f1manager2024.py  stub_example.py
app/: __init__.py  _charts.py  _data.py  _imports.py  _metrics.py  _tab_analysis.py  _tab_conditions.py  _tab_strategy.py  curate.py  dashboard.py  init_models.py  strategy.py  strategy_model.py
examples/: api_usage_example.py
f1m/: __init__.py  common.py  constants.py  imports.py  modeling.py  planner.py  research.py  telemetry.py
research/: tire_behavior.json  tire_behavior_test.json
scripts/: fix_encoding.py  fix_streamlit_width.py  logger.py  run_dashboard.bat  run_dashboard.ps1  unificar_master.ps1
tests/: conftest.py  test_common.py  test_constants.py  test_modeling.py  test_planner.py  test_smoke.py  test_telemetry.py
