[project]
name = "f1m-manager"
version = "1.1.0"
description = "Estrategia de paradas F1 Manager 2024 – dashboard + modeling + planner"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ivan" }]
license = { text = "MIT" }
keywords = ["f1", "pitstop", "strategy", "telemetry", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]

[tool.black]
line-length = 100
target-version = ["py39","py310","py311"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-select = ["I"]
fix = true
exclude = [".git",".venv","build","dist","__pycache__"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["f1m"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
